--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -14,6 +14,7 @@
     <h2>
         <%= campground.location %>
     </h2>
+    <a href="/campgrounds/<%=campground._id%>/edit">Edit</a>
     <footer>
         <a href="/campgrounds">All Campgrounds</a>
     </footer>
