--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,16 +13,20 @@
                 <li class="list-group-item">Submitted by <%= campground.author.username%></li>
                 <li class="list-group-item">$<%= campground.price%>/night</li>
             </ul>
+						<! -- Check if there is a user (if they are logged in) and if the author is the current user -->
+            <%  if( currentUser && campground.author.equals(currentUser._id))  {%>
             <div class="card-body">
                 <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
                 <form class="d-inline" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
                     <button class="btn btn-danger">Delete</button>
                 </form>
             </div>
+            <% } %>
             <div class="card-footer text-muted">
                 2 days ago
             </div>
         </div>
+
     </div>
     <div class="col-6">
         <h2>Leave A Review</h2>
