--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -34,14 +34,15 @@
                     </div>
                 </div>
             </div>
-
             <div class="mb-3">
-                <label class="form-label" for="description">Description</label>
-                <textarea class="form-control" type="text" id="description" name="campground[description]"
-                    required><%= campground.description%></textarea>
-                <div class="valid-feedback">
-                    Looks good!
+                <% campground.images.forEach(function(img, i) {  %>
+
+                <img src="<%=img.url %>" class="img-thumbnail" alt="">
+                <div class="form-check-inline">
+                    <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>">
                 </div>
+                <label for="image-<%=i%>">Delete?</label>
+                <% })%>
             </div>
             <div class="mb-3">
                 <button class="btn btn-info">Update Campground</button>
