--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -8,7 +8,12 @@
 <div class="card" mb-3>
     <div class="row">
         <div class="col-md-4">
-            <img class="img-fluid" alt="" src="<%=campground.image%>">
+            <%if(campground.images.length) {%>
+            <img class="img-fluid" alt="" src="<%=campground.images[0].url%>">
+            <% }else {%>
+            <img class="img-fluid" alt=""
+                src="https://res.cloudinary.com/dqfemxdwd/image/upload/v1657803413/YelpCamp/sahxtv50mlr2wcmyceio.jpg">
+            <% } %>
         </div>
         <div class="col-md-8">
             <div class="card-body">
